objects/InsurancePolicy/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AlianzasSponsors</fullName>
                <label>Alianzas &amp; Sponsors</label>
            </value>
            <value>
                <fullName>Bancos</fullName>
            </value>
            <value>
                <fullName>CorporateCommercial</fullName>
                <label>Corporate &amp; Commercial</label>
            </value>
            <value>
                <fullName>Directos</fullName>
            </value>
            <value>
                <fullName>IFAs</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>OtrosGLM</fullName>
                <label>Otros GLM</label>
            </value>
            <value>
                <fullName>Prendarios</fullName>
            </value>
            <value>
                <fullName>ProductoresInterior</fullName>
                <label>Productores Interior</label>
            </value>
            <value>
                <fullName>ProductoresMetro</fullName>
                <label>Productores Metro</label>
            </value>
            <value>
                <fullName>ZQBEInterior</fullName>
                <label>Z QBE Interior</label>
            </value>
            <value>
                <fullName>ZQBEMetro</fullName>
                <label>Z QBE Metro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>