objects/InsurancePolicy/fields/EmailPolicy__c.field-meta.xml
<CustomField>
    <fullName>EmailPolicy__c</fullName>
    <label>Email Póliza Electrónica</label>
    <type>Email</type>
</CustomField>