objects/InsurancePolicy/fields/LogicOrder__c.field-meta.xml
<CustomField>
    <fullName>LogicOrder__c</fullName>
    <description>Orden logico para ordenamiento inicial de las polizas</description>
    <label>Orden</label>
    <length>255</length>
    <type>Text</type>
</CustomField>