objects/InsurancePolicy/fields/PayerType__c.field-meta.xml
<CustomField>
    <fullName>PayerType__c</fullName>
    <label>Tipo de Pagador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asegurado</fullName>
            </value>
            <value>
                <fullName>AseguradoDeItem</fullName>
                <label>Asegurado de Item</label>
            </value>
            <value>
                <fullName>CertificadoAlContratante</fullName>
                <label>Certificado al Contratante</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>TerceroPagador</fullName>
                <label>Tercero Pagador</label>
            </value>
            <value>
                <fullName>Tomador</fullName>
                <default>true</default>
                <label>Tomador</label>
            </value>
            <value>
                <fullName>TomadorYAsegurado</fullName>
                <label>Tomador y Asegurado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>