objects/InsurancePolicy/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segmento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>