objects/InsurancePolicy/fields/StatusClient__c.field-meta.xml
<CustomField>
    <fullName>StatusClient__c</fullName>
    <description>Estado a mostrar en los portales de clientes.</description>
    <label>Estado Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>EmitidaNoVigente</fullName>
                <label>Emitida No Vigente</label>
            </value>
            <value>
                <fullName>L</fullName>
                <isActive>false</isActive>
                <label>L</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>NoVigente</fullName>
                <label>No Vigente</label>
            </value>
            <value>
                <fullName>Renovada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>