objects/InsurancePolicy/fields/StatusProducer__c.field-meta.xml
<CustomField>
    <fullName>StatusProducer__c</fullName>
    <description>Estado a mostrar en los portales de agentes</description>
    <label>Estado Productor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>AnuladaDesdeInicio</fullName>
                <label>Anulada desde Inicio</label>
            </value>
            <value>
                <fullName>AnuladaPorCliente</fullName>
                <label>Anulada por Cliente</label>
            </value>
            <value>
                <fullName>AnuladaPorClienteDesdeInicio</fullName>
                <label>Anulada por Cliente desde Inicio</label>
            </value>
            <value>
                <fullName>AnuladaPorCompania</fullName>
                <label>Anulada por Compania</label>
            </value>
            <value>
                <fullName>AnuladaPorCompaniaDesdeInicio</fullName>
                <label>Anulada por Compañía desde Inicio</label>
            </value>
            <value>
                <fullName>Caducada</fullName>
            </value>
            <value>
                <fullName>CanceladaDesdeInicio</fullName>
                <label>Cancelada desde Inicio</label>
            </value>
            <value>
                <fullName>CanceladaPorCliente</fullName>
                <label>Cancelada por Cliente</label>
            </value>
            <value>
                <fullName>CanceladaPorClienteDesdeInicio</fullName>
                <label>Cancelada por Cliente desde Inicio</label>
            </value>
            <value>
                <fullName>CanceladaPorCompania</fullName>
                <label>Cancelada por Compania</label>
            </value>
            <value>
                <fullName>CanceladaPorCompaniaDesdeInicio</fullName>
                <label>Cancelada por Compañía desde Inicio</label>
            </value>
            <value>
                <fullName>EmitidaNoVigente</fullName>
                <label>Emitida No Vigente</label>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Madurada</fullName>
            </value>
            <value>
                <fullName>MaduradaCaducada</fullName>
                <label>Madurada Caducada</label>
            </value>
            <value>
                <fullName>MaduradaConAportes</fullName>
                <label>Madurada con Aportes</label>
            </value>
            <value>
                <fullName>MaduradaRescatada</fullName>
                <label>Madurada Rescatada</label>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>NTUDeclinada</fullName>
                <label>NTU Declinada</label>
            </value>
            <value>
                <fullName>NTUPospuesta</fullName>
                <label>NTU Pospuesta</label>
            </value>
            <value>
                <fullName>Propuesta</fullName>
            </value>
            <value>
                <fullName>Renovada</fullName>
            </value>
            <value>
                <fullName>Rescatada</fullName>
            </value>
            <value>
                <fullName>RescateAnterior</fullName>
                <label>Rescate (anterior)</label>
            </value>
            <value>
                <fullName>Saldada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>