objects/InsurancePolicy/fields/SubChannel__c.field-meta.xml
<CustomField>
    <fullName>SubChannel__c</fullName>
    <label>Sub Canal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASOtros</fullName>
                <label>A&amp;S Otros</label>
            </value>
            <value>
                <fullName>AlianzasSponsors</fullName>
                <label>Alianzas &amp; Sponsors</label>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Bancos</fullName>
            </value>
            <value>
                <fullName>BancosOtros</fullName>
                <label>Bancos Otros</label>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Ciudad</fullName>
            </value>
            <value>
                <fullName>Comafi</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>CorporateCommercial</fullName>
                <label>Corporate &amp; Commercial</label>
            </value>
            <value>
                <fullName>CREDIMAS</fullName>
            </value>
            <value>
                <fullName>Directos</fullName>
            </value>
            <value>
                <fullName>DIRECTV</fullName>
                <label>DIREC TV</label>
            </value>
            <value>
                <fullName>Domestico</fullName>
                <label>Doméstico</label>
            </value>
            <value>
                <fullName>Falabella</fullName>
            </value>
            <value>
                <fullName>FordCredit</fullName>
                <label>Ford Credit</label>
            </value>
            <value>
                <fullName>FrancesOpen</fullName>
                <label>Francés Open</label>
            </value>
            <value>
                <fullName>FrancesPrendas</fullName>
                <label>Francés Prendas</label>
            </value>
            <value>
                <fullName>Galicia</fullName>
            </value>
            <value>
                <fullName>GPAT</fullName>
                <isActive>false</isActive>
                <label>GPAT</label>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>HuerfanasZurich</fullName>
                <label>Huérfanas Zurich</label>
            </value>
            <value>
                <fullName>ICBC</fullName>
            </value>
            <value>
                <fullName>IFAs</fullName>
            </value>
            <value>
                <fullName>IPZProd</fullName>
                <label>IPZ Prod</label>
            </value>
            <value>
                <fullName>IPZRec</fullName>
                <label>IPZ Rec</label>
            </value>
            <value>
                <fullName>IPZRecibido</fullName>
                <isActive>false</isActive>
                <label>IPZ Recibido</label>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>Naranja</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>