objects/InsurancePolicy/recordTypes/SegGenerales.recordType-meta.xml
<RecordType>
    <fullName>SegGenerales</fullName>
    <active>true</active>
    <description>Record Type de Seg. Generales</description>
    <label>Seg. Generales</label>
</RecordType>