objects/InsurancePolicy/recordTypes/VidaNoUnitLinked.recordType-meta.xml
<RecordType>
    <fullName>VidaNoUnitLinked</fullName>
    <active>true</active>
    <description>Record Type de Vida No UL</description>
    <label>Vida No Unit Linked</label>
</RecordType>