objects/InsurancePolicy/recordTypes/VidaUnitLinked.recordType-meta.xml
<RecordType>
    <fullName>VidaUnitLinked</fullName>
    <active>true</active>
    <description>Record Type de Vida UL</description>
    <label>Vida Unit Linked</label>
</RecordType>