objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>Name</columns>
    <columns>NameInsured</columns>
    <columns>ExpirationDate</columns>
    <columns>PremiumAmount</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>InsurancePolicy.VidaUnitLinked</value>
    </filters>
    <label>Todas las Pólizas de seguros</label>
</ListView>